--- a/src/components/Milk/Milk.module.css
+++ b/src/components/Milk/Milk.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	color: var(--colour-blue-light);
+	color: var(--colour-green);
 	margin-top: 4rem;
 }
 
